--- a/infrastructure/mongodb/playbooks/roles/mongodb/templates/mongos.conf.j2
+++ b/infrastructure/mongodb/playbooks/roles/mongodb/templates/mongos.conf.j2
@@ -10,6 +10,7 @@ processManagement:
 
 net:
   port: {{ mongos_port }}
+  bindIp: 0.0.0.0
 
 security:
   keyFile: {{ mongodb_datadir_prefix }}/secret
