--- a/infra/mongodb/playbooks/roles/mongodb/templates/mongod.conf.j2
+++ b/infra/mongodb/playbooks/roles/mongodb/templates/mongod.conf.j2
@@ -18,7 +18,7 @@ security:
 
 net:
   port: {{ mongod_port }}
-  # bindip: 0.0.0.0
+  bindIp: 0.0.0.0
 
 replication:
   replSetName: {{ inventory_hostname }}
