--- a/infra/mongodb/playbooks/roles/mongodb/templates/mongod_init.js.j2
+++ b/infra/mongodb/playbooks/roles/mongodb/templates/mongod_init.js.j2
@@ -2,7 +2,7 @@ rs.initiate(
   {
     _id : "{{ inventory_hostname }}",
     members: [
-    {% for host in groups['replication_servers'] %}
+    {% for host in groups['mongo_servers'] %}
       { _id : {{loop.index}}, host: "{{host}}:{{mongod_port}}" },
     {% endfor %}
     ]
