--- a/infra/consul/playbooks/roles/consul/templates/consul.hcl.j2
+++ b/infra/consul/playbooks/roles/consul/templates/consul.hcl.j2
@@ -8,14 +8,28 @@ verify_incoming = true
 verify_outgoing = true
 verify_server_hostname = true
 
-# acl = {
-#   enabled = true
-#   default_policy = "allow"
-#   enable_token_persistence = true
-# }
+acl = {
+  enabled = true
+  default_policy = "allow"
+  enable_token_persistence = true
+}
 
 performance {
   raft_multiplier = 1
 }
 
+server = true
+
+
+ui = true
+
+bind_addr = "{{ ansible_host }}"
+
+client_addr = "{{ ansible_host }}"
+
 retry_join = [{% for host in groups['consulnodes'] %}"{{ hostvars[host]['ansible_host'] }}"{% if not loop.last %},{% endif %}{% endfor %}]
+start_join = [{% for host in groups['consulnodes'] %}"{{ hostvars[host]['ansible_host'] }}"{% if not loop.last %},{% endif %}{% endfor %}]
+
+{% if inventory_hostname in groups['consuladmin']%}
+bootstrap = true
+{% endif %}
