--- a/infra/consul/playbooks/roles/consul/templates/server.hcl.j2
+++ b/infra/consul/playbooks/roles/consul/templates/server.hcl.j2
@@ -1,4 +1,9 @@
 server = true
+
 bootstrap_expect = {{ consul_bootstrap_expect }}
-client_addr = "10.0.1.1"
+
 ui = true
+
+bind_addr = {{ ansible_host }}
+
+client_addr = {{ ansible_host }}
